Fixed alignment and hover color of top level menu item of right-click menu.

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
@@ -1726,7 +1726,7 @@ input.iceSelInpDateClosePopup {
 /* was iceSubMenuDividerVert */
     display: inline;
     float: right;
-    padding-top: 3px;
+    padding-top: 0px;
     padding-right: 1px;
 }
 
