--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
@@ -1677,7 +1677,7 @@ input {
 .iceMnuPopVrtSubMenuInd { /* was iceSubMenuDividerVert */
     display:inline;
     float:right;
-    padding-top: 3px;
+    padding-top: 0px;
     padding-right: 1px;
 }
 
