--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
@@ -1634,7 +1634,7 @@ input.iceSelInpDateClosePopup {
 .iceMnuPopVrtSubMenuInd { /* was iceSubMenuDividerVert */
     display:inline;
     float:right;
-    padding-top: 3px;
+    padding-top: 0px;
     padding-right: 1px;
 }
 /*
